2011-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  support/regression/tests/bug3410878.c:
	  Fixed bug #3410878.

2011-09-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (processParms): fixed bugs 3166064 and 3394118
	* support/regression/tests/bug3166064.c: new, added
	* .version,
	* doc/sdccman.lyx: bumped version to 3.0.5

2011-09-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (getNelements): fixed bug 3135551
	* support/regression/tests/bug3135551.c: new, added
	* src/ds390/gen.c (genInline),
	* src/hc08/gen.c (genInline),
	* src/mcs51/gen.c (genInline),
	* src/pic14/gen.c (genInline),
	* src/pic16/gen.c (genInline),
	* src/z80/gen.c (genInline),
	* support/cpp/c-ppoutput.c (scan_translation_unit),
	* support/cpp/libcpp/lex.c (cpp_output_line): replaced character by '\x87'

2011-09-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genInline),
	* src/hc08/gen.c (genInline),
	* src/mcs51/gen.c (genInline),
	* src/pic14/gen.c (genInline),
	* src/pic16/gen.c (genInline),
	* src/z80/gen.c (genInline): convert (0x87) to newline
	* support/cpp/libcpp/include/cpplib.h: removed IN_ASM, added ENTER_ASM and
	  EXIT_ASM
	* support/cpp/c-ppoutput.c (scan_translation_unit),
	* support/cpp/libcpp/lex.c (_cpp_process_line_notes, _cpp_lex_direct,
	  cpp_output_token, cpp_output_line): fixed bugs 3407198 and 3407279 by
	  inserting (0x87) for newlines
	* support/regression/tests/bug1505956.c: added tests

2011-09-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3401973.c:
	  Fixed bug #3401973.

2011-09-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c,
	  support/regression/bug3407632.c:
	  Fixed bug #3407632.

2011-09-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.h: added pcb & rterr, modified lkglist
	* sdas/linksrc/lkarea.c (find_empty_space, allocate_space): changed warnings